--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src='js/app.js' type='module' defer></script> 
     <link rel='stylesheet' href='css/style.css'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -14,19 +17,23 @@
             <div class="content-right"></div>
         </div>
         <div class="content">
-            <div class="logo"><img src="storage/9-removebg-preview.png" alt="" srcset=""></div>
+            <div class="logo"><img src="storage/logo.png" alt="" srcset=""></div>
         <div class="rating">
             <span class="number">85</span>
-            <span class="label">ATHLEX<br>DC</span>
+            <span class="label">ATHLEX</span>
+            <span class="position">DC</span>
         </div>
-        <img src="assets/player_image.png" alt="Julian Quintero" class="player-image">
+        <img src="storage/player_image.png" alt="player image" class="player-image">
         <div class="player-info">
             <h2 class="player-name">JULIAN QUINTERO</h2>
             <div class="linea"></div>
             <p class="player-country">COLOMBIA</p>
             <p class="player-stats">70 Kg | 185 cm | 19 años</p>
         </div>
-        <div class="background-pattern"></div>
+        <div class="background-pattern">
+            <img src="storage/background.svg" alt="patron" class="patron-central">
+            <img src="" alt="patronIz" class="patronIz">
+        </div>
     
     </div>
 </body>
